# pyFahrschein

./: .cookiecutterrc  .coveragerc  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
fahrschein/: __init__.py  version.py
tests/: test_version.py
