[tool]
[tool.poetry]
name = "pyFahrschein"
version = "0.1.0"
description = "Python Nakadi Client inspired by https://github.com/zalando-nakadi/fahrschein"
license = "Apache-2.0"

authors = ["Ancelot Pinto <ancelotpinto@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ancelotpinto/pyFahrschein"
documentation = "https://pyfahrschein.readthedocs.io/"
keywords = ["nakadi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]

packages = [
    { include = "fahrschein" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-travis-fold = "^1.3.0"
tomlkit = "^0.5.11"

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
